Resolved Card Height Issue & Numbered List Issue
Added a non-breaking space to resove issue with card height. Adjusted media queries to resolve numbered list misalignment.

--- a/css/queries.css
+++ b/css/queries.css
@@ -155,23 +155,94 @@
     }
 
     .mobile-nav-icon {
+
         display: inline-block;
+
+        position: relative;
+
+        z-index: 9999;
+
     }
 
-    .main-nav {
-        float: left;
+    ​ .main-nav {
+
+        float: none;
+
+        position: absolute;
+
+        z-index: 8888;
+
+        width: 100%;
+
+        height: 100vh;
+
+        margin: 0;
+
+        margin-left: -2%;
+
+        background-color: rgba(230, 126, 34, 0.92);
+
+        text-align: center;
+
+        padding-top: 20vh;
+
     }
 
-    .main-nav li {
+    ​ .main-nav li {
+
         display: block;
+
+        margin-left: 0;
+
+        font-size: 110%;
+
     }
 
-    .main-nav li a:link,
+    ​ .main-nav li a:link,
+
     .main-nav li a:visited {
+
         display: block;
+
         border: 0;
+
+        padding: 10px 0;
+
+        font-size: 100%;
+
     }
 
+    .sticky .main-nav {
+        margin-top: 0;
+    }
+
+
+
+
+
+    .sticky .main-nav li a:link,
+
+    .sticky .main-nav li a:visited {
+
+        padding: 10px 0;
+
+        color: #fff;
+
+    }
+
+
+
+    .sticky .mobile-nav-icon {
+        margin-top: 10px;
+    }
+
+    .sticky .mobile-nav-icon i {
+        color: #555;
+    }
+
+    .sticky .mobile-nav-icon i.ion-close-round {
+        color: #fff;
+    }
 
     .long-copy {
         width: 100%;
@@ -218,10 +289,9 @@
     }
 
     .works-step {
-        margin-bottom: -5px;
         width: 100%;
         padding-bottom: 0px;
-        padding-top: 40px;
+        padding-top: 8px;
     }
 
     .works-step:last-of-type {
@@ -229,7 +299,7 @@
     }
 
     .app-screen {
-        width: 50%;
+        width: 40%;
         height: auto;
     }
 
